Port ComfyUIStrategy from Latent-Library, drop UserDataManager dependency